# rail_lidar

./: CMakeLists.txt  Ladar.cpp  Ladar.h  README.md  filter_ground.cpp  filter_ground.h  ground_segmentation.cc  main.cpp  params.yaml  segment.cc  viewer.cc  viewer.h  xp_lidar.cpp  xp_lidar.h  xp_opengl.cpp  xp_opengl.h  xp_pcl.cpp  xp_pcl.h
